--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "builder",
-  "description": "A builder field for Kirby CMS",
+  "name": "kirby-tabs",
+  "description": "Tabbed Interface for Kirby CMS",
   "author": "Tim Ötting <tim@whateveryouremailaddresis.com>",
   "license": "MIT",
-  "version": "1.1",
+  "version": "0.1.0",
   "type": "kirby-field"
 }
